# hid_ros2

./: .pre-commit-config.yaml  Dockerfile  QUICKSTART.md  README.md  RELEASE.md  coverage.xml  docker-compose.yml
.github/workflows/: ci.yaml  docs.yaml  release.yaml
docs/: _config.yml  requirements.txt
docs/source/: api_reference.md  architecture.md  basic_concepts.md  changelog.md  code_generation.md  conf.py  contributing.md  controllers.md  developer_tools.md  faq.md  hardware_interface.md  index.rst  installation.md  quickstart.md  schema_reference.md  troubleshooting.md  tutorial_custom_device.md
docs/source/_static/: hid_descriptor.css  hid_descriptor.js
docs/source/advanced/: custom_controllers.md  debugging.md  firmware_integration.md  hid_report_descriptors.md  type_system.md
docs/source/examples/: dummy_pose.md  signal_generator.md
dummy_bringup/: CMakeLists.txt  package.xml
dummy_bringup/config/: dummy_controllers.yaml
dummy_bringup/launch/: dummy.launch.py  test_forward_position_controller.launch.py  test_joint_trajectory_controller.launch.py
dummy_description/: CMakeLists.txt  README.md  package.xml
dummy_description/launch/: view_dummy.launch.py
dummy_description/test/: dummy_test_urdf_xacro.py
dummy_description/urdf/: dummy.urdf.xacro
dummy_description/urdf/dummy/: dummy_macro.ros2_control.xacro  dummy_macro.xacro
dummy_pose_broadcaster/: CMakeLists.txt
dummy_pose_broadcaster/include/dummy_pose_broadcaster/: visibility_control.h
examples/dummy_pose_device/dummy_bringup/: CMakeLists.txt  package.xml
examples/dummy_pose_device/dummy_bringup/launch/: test_joint_trajectory_controller.launch.py
examples/dummy_pose_device/dummy_bringup/schema/: hid_device.yaml
examples/dummy_pose_device/dummy_bringup/urdf/: hid_robot.urdf.xacro
examples/dummy_pose_device/dummy_pose_broadcaster/: dummy_pose_broadcaster.xml  package.xml
examples/dummy_pose_device/dummy_pose_broadcaster/include/dummy_pose_broadcaster/: dummy_pose_broadcaster.hpp
examples/dummy_pose_device/dummy_pose_broadcaster/src/: dummy_pose_broadcaster.cpp
examples/signal_generator/signal_command_controller/: package.xml
examples/signal_generator/signal_command_controller/include/signal_command_controller/: signal_command_controller.hpp
examples/signal_generator/signal_generator_bringup/: package.xml
examples/signal_generator/signal_generator_bringup/config/: signal_gen_controllers.yaml
hid_controllers/hid_broadcaster/: CMakeLists.txt  package.xml
hid_controllers/hid_diagnostic_broadcaster/: README.md
hid_controllers/hid_diagnostic_broadcaster/include/hid_diagnostic_broadcaster/: hid_diagnostic_broadcaster.hpp  visibility_control.h
hid_controllers/hid_diagnostic_broadcaster/src/: hid_diagnostic_broadcaster.cpp
hid_controllers/hid_generic_broadcaster/: package.xml
hid_controllers/hid_generic_broadcaster/include/hid_generic_broadcaster/: hid_generic_broadcaster.hpp  visibility_control.h
hid_descriptor_generator/: CMakeLists.txt  README.md  package.xml
hid_descriptor_generator/cmake/: hid_generate.cmake
hid_descriptor_generator/scripts/: generate_hid_files.py
hid_diagnostic_broadcaster/: CMakeLists.txt  hid_diagnostic_broadcaster.xml  package.xml
hid_diagnostic_broadcaster/src/: hid_diagnostic_broadcaster.cpp
hid_generic_broadcaster/: CMakeLists.txt  README.md  hid_generic_broadcaster.xml
hid_generic_broadcaster/include/hid_generic_broadcaster/: hid_generic_broadcaster.hpp
hid_generic_broadcaster/src/: hid_generic_broadcaster.cpp
hid_hardware/: CMakeLists.txt  hid_hardware.xml  package.xml
hid_hardware/include/hid_hardware/: hid_device.hpp  hid_hardware.hpp
hid_hardware/src/: hid_device.cpp  hid_hardware.cpp
hid_hardware/test/: test_hid_hardware.cpp
hid_msgs/: CMakeLists.txt  package.xml
hid_tools/: CMakeLists.txt  README.md  TOOLS_SUMMARY.md  package.xml
hid_tools/hid_tools/: __init__.py
hid_tools/scripts/: generate_hid_descriptor  generate_hid_report_device  inspect_device  validate_schema
signal_command_controller/: CMakeLists.txt  signal_command_controller.xml
signal_command_controller/include/signal_command_controller/: visibility_control.h
signal_command_controller/src/: signal_command_controller.cpp
signal_generator_bringup/: CMakeLists.txt  README.md
signal_generator_bringup/launch/: signal_gen.launch.py
signal_generator_bringup/schema/: signal_generator.yaml
